refactor: 게시글 기능 및 설정 파일 개선
